--- a/drupal/sites/all/themes/pivot/sass/_bxslider.scss
+++ b/drupal/sites/all/themes/pivot/sass/_bxslider.scss
@@ -24,6 +24,10 @@
 .bx-wrapper img {
   max-width: 100%;
   display: block;
+  padding: 0 20px;
+  @media (max-width: 768px) {
+    padding: 0;
+  }
 }
 
 /** THEME
